--- a/css/style.css
+++ b/css/style.css
@@ -147,4 +147,67 @@ body {
 .content_game_more-item {
     border-bottom: 1px solid #363535;
 }
+
+.content_news_more p:nth-child(1) {
+    color: white;
+    font-size: 22px;
+    font-weight: bold;
+    margin-left: 0;
+}
+
+.content_news_more .content {
+    color: #dad4d3;
+    margin-left: 0;
+    margin-top: 30px;
+    font-size: 17px;
+    width: 100%;
+}
+
+.content_news_more i, .content_news_more span {
+    color: #8b8686;
+}
+
+.content_line .line {
+    height: 0.8px;
+    background-color: #8b8686;
+    margin-top: 10px;
+}
+
+.content_news_showAll button {
+    background: #ff8601;
+    border: none;
+    outline: none;
+    color: white;
+    font-weight: bold;
+    margin-top: 20px;
+    padding: 10px 30px;
+    font-size: 20px;
+}
+
+.content_top-game {
+    position: relative;
+}
+
+.content_top-game-detail {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-35%, -50%);
+    width: 100%;
+    color: white;
+    font-size: 20px;
+}
+
 /* End content CSS */
+
+/* Start footer CSS */
+.footer {
+    width: 80%;
+    margin: auto;
+    background: #000000;
+    margin-top: 45px;
+    color: white;
+}
+
+
+/* End footer CSS */
