--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,16 @@ body {
     font-size: 20px;
 }
 
+.content_find-us {
+    background: linear-gradient(45deg, rgba(255,134,1,1) 0%, rgba(255,134,1,1) 65%, rgba(0,0,0,1) 66%, rgba(0,0,0,1) 100%);
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.content_find-us-img img {
+    height: 320px;
+}
 /* End content CSS */
 
 /* Start footer CSS */
@@ -209,5 +219,26 @@ body {
     color: white;
 }
 
+.footer_content {
+    width: 90%;
+    margin: auto;
+}
 
+.footer_content-item p {
+    font-size: 20px;
+}
+
+.footer_content-item {
+    background: linear-gradient(45deg, rgba(255,134,1,1) 0%, rgba(255,134,1,1) 49.5%, rgba(42,40,40,1) 50%, rgba(42,40,40,1) 100%);
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.license {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
 /* End footer CSS */
